Backlog: Fix alignment of entry facade

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -372,6 +372,7 @@ h4, h5 {
 }
 .entry-facade-container {
   padding: 0;
+  margin-bottom: 1ex;
 }
 .show-entry {
   padding: 0.5ex;
